--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Atanas Atanassov
-description: A blog about software development, technology, and life.
+Description: A blog about software development, technology, and life.
 github_username: atanas60
 instagram_username: hey_naso
 chess_username: babayoca
-theme: jekyll-theme-macayman
+theme: jekyll-theme-cayman
